--- a/public/css/login.css
+++ b/public/css/login.css
@@ -22,6 +22,21 @@ body {
   display: flex;
 }
 
+.slider-container {
+  position: relative;
+}
+
+.slider-container__images .active {
+  opacity: 1;
+}
+
+.slider-container__images img {
+  opacity: 0;
+  position: absolute;
+  right: 64px;
+  top: 100px;
+}
+
 .form-container > div {
   padding: 0 40px;
 }
@@ -39,6 +54,12 @@ body {
   display: block;
 }
 
+.form-container .login {
+  padding-top: 10px;
+  padding-bottom: 20px;
+  margin-bottom: 10px;
+}
+
 .form-container .input-container {
   position: relative;
   height: 36px;
@@ -53,6 +74,7 @@ body {
   top: 0;
   left: 0;
   font-size: 12px;
+  color: #8e8e8e;
 }
 
 .form-container .input-container input {
@@ -84,6 +106,7 @@ body {
   margin: 0 18px;
   color: #8e8e8e;
   font-size: 13px;
+  font-weight: bold;
 }
 
 .form-container .separator .line {
@@ -92,7 +115,53 @@ body {
   background-color: #dbdbdb;
 }
 
+.form-container .login-facebook {
+  display: flex;
+  justify-content: center;
+  text-decoration: none;
+}
+
+.form-container .login-facebook .facebook-logo {
+  width: 16px;
+  height: 16px;
+  margin-right: 8px;
+}
+
+.form-container .login-facebook__text {
+  color: #385185;
+  font-size: 14px;
+  font-weight: bolder;
+}
+
+.form-container .forgot-password {
+  text-decoration: none;
+  font-size: 12px;
+  color: #00376b;
+  display: flex;
+  justify-content: center;
+  margin-top: 20px;
+}
+
 .form-container .apps > img {
   height: 40px;
+}
+
+.form-container .apps__text {
+  text-align: center;
+  margin: 20px 0;
+  font-size: 14px;
+}
+
+.form-container .sign-up {
+  padding-top: 25px;
+  padding-bottom: 25px;
+  text-align: center;
+  font-size: 14px;
+}
+
+.form-container .sign-up__btn {
+  text-decoration: none;
+  font-weight: bolder;
+  color: #0095f6;
 }
 
