--- a/resources/sass/login.scss
+++ b/resources/sass/login.scss
@@ -12,6 +12,22 @@ body {
     display: flex;
 }
 
+.slider-container{
+    position:relative;
+    &__images{
+
+        .active{
+            opacity:1;
+        }
+        img{
+            opacity:0;
+            position:absolute;
+            right:64px;
+            top:100px;
+        }
+    }
+}
+
 .form-container {
 
 
@@ -29,6 +45,11 @@ body {
         width:175px;
         display:block;
     }
+    .login{
+        padding-top:10px;
+        padding-bottom:20px;
+        margin-bottom:10px;
+    }
 
     .input-container {
         position: relative;
@@ -43,6 +64,7 @@ body {
             top: 0;
             left: 0;
             font-size: $small-letter;
+            color:#8e8e8e;
         }
 
         input {
@@ -55,6 +77,7 @@ body {
 
     }
     .login-form{
+        
         .submit-btn{
             background-color:#0095f6;
             width: 100%;
@@ -76,6 +99,7 @@ body {
             margin: 0 18px;
             color: #8e8e8e;
             font-size:13px;
+            font-weight:bold;
         }
         .line{
             height:1px;
@@ -83,8 +107,51 @@ body {
             background-color: #dbdbdb;
         }
     }
+    .login-facebook{
+        display:flex;
+        justify-content:center;
+        text-decoration:none;
+
+        .facebook-logo{
+            width:16px;
+            height:16px;
+            margin-right:8px;
+        }
+        &__text{
+            color:#385185;
+            font-size: 14px;
+            font-weight:bolder;
+
+        }
+    }
+    .forgot-password{
+        text-decoration:none;
+        font-size:12px;
+        color: #00376b;
+        display: flex;
+        justify-content:center;
+        margin-top:20px;
+    }
 
     .apps>img {
         height: 40px;
     }
+    .apps{
+        &__text{
+            text-align:center;
+            margin:20px 0;
+            font-size:14px;
+        }
+    }
+.sign-up{
+    padding-top:25px;
+    padding-bottom:25px;
+    text-align:center;
+    font-size:14px;
+    &__btn{
+        text-decoration:none;
+        font-weight:bolder;
+        color:#0095f6;
+    }
+}
 }
