--- a/resources/sass/login.scss
+++ b/resources/sass/login.scss
@@ -24,6 +24,7 @@ body {
             position:absolute;
             right:64px;
             top:100px;
+            transition: opacity 2s;
         }
     }
 }
