--- a/resources/sass/login.scss
+++ b/resources/sass/login.scss
@@ -10,20 +10,24 @@ body {
 
 .main-content {
     display: flex;
+    margin-bottom:100px;
+
 }
 
-.slider-container{
-    position:relative;
-    &__images{
+.slider-container {
+    position: relative;
 
-        .active{
-            opacity:1;
+    &__images {
+
+        .active {
+            opacity: 1;
         }
-        img{
-            opacity:0;
-            position:absolute;
-            right:64px;
-            top:100px;
+
+        img {
+            opacity: 0;
+            position: absolute;
+            right: 64px;
+            top: 100px;
             transition: opacity 2s;
         }
     }
@@ -31,32 +35,58 @@ body {
 
 .form-container {
 
+    .error-message{
+        color:red;
+        font-size:14px;
+        margin: 10px 0;
+        text-align:center;
+    }
 
-    > div{
+    >div {
         padding: 0 40px;
     }
-    .box{
-        border-radius:1px;
-        background-color:white;
+
+    .box {
+        border-radius: 1px;
+        background-color: white;
         border: 1px solid #dbdbdb;
     }
+
     .app-name {
         margin: 22px auto 36px;
-        height:51px;
-        width:175px;
-        display:block;
+        height: 51px;
+        width: 175px;
+        display: block;
     }
-    .login{
-        padding-top:10px;
-        padding-bottom:20px;
-        margin-bottom:10px;
+
+    .login {
+        padding-top: 10px;
+        padding-bottom: 20px;
+        margin-bottom: 10px;
     }
 
     .input-container {
         position: relative;
         height: 36px;
         display: block;
-        margin-bottom:6px;
+        margin-bottom: 6px;
+        display:flex;
+        &__end{
+            padding-left:8px;
+            background-color:#fafafa;
+            border: 1px solid #dbdbdb;
+            border-top-right-radius: 1px;
+            border-bottom-right-radius: 1px;
+            border-left:none;
+            font-size:14px;
+            font-weight:bolder;
+            display:flex;
+            align-items:center;
+        }
+        &__show{
+            padding-right:8px;
+            cursor:pointer;
+        }
 
         .upper-placeholder {
             padding-left: 8px;
@@ -65,94 +95,148 @@ body {
             top: 0;
             left: 0;
             font-size: $small-letter;
-            color:#8e8e8e;
+            color: #8e8e8e;
         }
 
         input {
             padding: 14px 0 2px 8px;
-            width:100%;
-            border-radius:3px;
-            border:1px solid #dbdbdb;
-
-        }
-
-    }
-    .login-form{
-        
-        .submit-btn{
-            background-color:#0095f6;
             width: 100%;
-            color:white;
-            border-radius:4px;
-            border: 1px  solid transparent;
-            padding:5px 0;
-            font-weight:bolder;
-            font-size:14px;
-            margin:8px 0;
+            border-radius: 3px;
+            border: 1px solid #dbdbdb;
+            border-top-right-radius: 0;
+            border-bottom-right-radius: 0;
+            border-right:none;
+        }
+        input:focus{
+            outline:none;
+        }
+
+    }
+
+    .login-form {
+
+        .submit-btn {
+            background-color: #0095f6;
+            width: 100%;
+            color: white;
+            border-radius: 4px;
+            border: 1px solid transparent;
+            padding: 5px 0;
+            font-weight: bolder;
+            font-size: 14px;
+            margin: 8px 0;
+            cursor:pointer;
         }
     }
 
-    .separator{
-        display:flex;
-        align-items:center;
-        margin:10px 0 18px;
-        .content{
+    .separator {
+        display: flex;
+        align-items: center;
+        margin: 10px 0 18px;
+
+        .content {
             margin: 0 18px;
             color: #8e8e8e;
-            font-size:13px;
-            font-weight:bold;
+            font-size: 13px;
+            font-weight: bold;
         }
-        .line{
-            height:1px;
-            flex-grow:1;
+
+        .line {
+            height: 1px;
+            flex-grow: 1;
             background-color: #dbdbdb;
         }
     }
-    .login-facebook{
-        display:flex;
-        justify-content:center;
-        text-decoration:none;
 
-        .facebook-logo{
-            width:16px;
-            height:16px;
-            margin-right:8px;
+    .login-facebook {
+        display: flex;
+        justify-content: center;
+        text-decoration: none;
+
+        .facebook-logo {
+            width: 16px;
+            height: 16px;
+            margin-right: 8px;
         }
-        &__text{
-            color:#385185;
+
+        &__text {
+            color: #385185;
             font-size: 14px;
-            font-weight:bolder;
+            font-weight: bolder;
 
         }
     }
-    .forgot-password{
-        text-decoration:none;
-        font-size:12px;
+
+    .forgot-password {
+        text-decoration: none;
+        font-size: 12px;
         color: #00376b;
         display: flex;
-        justify-content:center;
-        margin-top:20px;
+        justify-content: center;
+        margin-top: 20px;
     }
 
     .apps>img {
         height: 40px;
+        cursor:pointer;
     }
-    .apps{
-        &__text{
-            text-align:center;
-            margin:20px 0;
-            font-size:14px;
+
+    .apps {
+        &__text {
+            text-align: center;
+            margin: 20px 0;
+            font-size: 14px;
         }
     }
-.sign-up{
-    padding-top:25px;
-    padding-bottom:25px;
-    text-align:center;
-    font-size:14px;
-    &__btn{
-        text-decoration:none;
-        font-weight:bolder;
-        color:#0095f6;
+
+    .sign-up {
+        padding-top: 25px;
+        padding-bottom: 25px;
+        text-align: center;
+        font-size: 14px;
+
+        &__btn {
+            text-decoration: none;
+            font-weight: bolder;
+            color: #0095f6;
+        }
     }
 }
+
+footer{
+    color:#8e8e8e;
+    font-size:12px;
+    ul{
+        display:flex;
+        justify-content:center;
+        flex-wrap:wrap;
+        margin-bottom:12px;
+        li{
+            margin:0 8px;
+        }
+    }
+    .lang-copyright{
+        padding-top:12px;
+        .select-lang-container{
+            position:relative;
+        }
+        .select-lang{
+            background-color:$primary-bg-color;
+            border:none;
+            opacity:0;
+            position:absolute;
+            left:0;
+            top:0;
+            &__arrow{
+                margin-left: 6px;
+            }
+        }
+
+    }
+}
+
+@media screen and (max-width: 875px ){
+    .slider-container{
+        display:none;
+    }
 }
