--- a/public/css/login.css
+++ b/public/css/login.css
@@ -10,8 +10,22 @@ body {
   height: 100%;
 }
 
+body {
+  background-color: #fafafa;
+}
+
 ul {
   list-style-type: none;
+}
+
+.box {
+  border-radius: 1px;
+  background-color: white;
+  border: 1px solid #dbdbdb;
+}
+
+.hide {
+  display: none;
 }
 
 body {
@@ -19,7 +33,6 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  background-color: #fafafa;
 }
 
 .main-content {
@@ -52,12 +65,6 @@ body {
 
 .form-container > div {
   padding: 0 40px;
-}
-
-.form-container .box {
-  border-radius: 1px;
-  background-color: white;
-  border: 1px solid #dbdbdb;
 }
 
 .form-container .app-name {
