--- a/public/css/home.css
+++ b/public/css/home.css
@@ -37,6 +37,7 @@ header {
   display: flex;
   justify-content: center;
   margin-bottom: 10px;
+  z-index: 100;
 }
 
 .header-content {
@@ -55,6 +56,7 @@ header {
 }
 
 .post__header {
+  padding: 12px;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -62,6 +64,16 @@ header {
 
 .post__header .profile-info .round-profile-img {
   flex-direction: row;
+}
+
+.post__header .profile-info .round-profile-img .profile-image-container {
+  height: 46px;
+  width: 46px;
+}
+
+.post__header .profile-info .round-profile-img .profile-image-container img {
+  height: 42px;
+  width: 42px;
 }
 
 .post__slider {
@@ -75,6 +87,7 @@ header {
 
 .post__slider--images {
   width: 100%;
+  scroll-behavior: smooth;
   -ms-scroll-snap-type: x mandatory;
       scroll-snap-type: x mandatory;
   touch-action: auto;
@@ -99,6 +112,102 @@ header {
   -o-object-fit: cover;
      object-fit: cover;
   display: block;
+}
+
+.post__actions {
+  display: flex;
+  justify-content: space-between;
+}
+
+.post__actions .left-actions {
+  width: 130px;
+}
+
+.post__actions .right-actions {
+  width: 130px;
+  display: flex;
+  justify-content: flex-end;
+}
+
+.post__actions svg {
+  margin: 8px;
+  width: 24px;
+  height: 24px;
+}
+
+.post__actions .images-indicator ul {
+  display: flex;
+  justify-content: center;
+  margin: 8px;
+}
+
+.post__actions .images-indicator ul li {
+  margin: 0 3px;
+  height: 6px;
+  width: 6px;
+  border-radius: 50%;
+  background-color: #8e8e8e;
+}
+
+.post__actions .images-indicator ul li.active {
+  background-color: #0095f6;
+}
+
+.post__likes {
+  margin: 0 8px 8px;
+  font-weight: bolder;
+  font-size: 14px;
+}
+
+.post__description {
+  font-size: 14px;
+}
+
+.post__description .post__username {
+  margin-left: 8px;
+}
+
+.post__comments {
+  margin: 8px;
+  font-size: 14px;
+}
+
+.post__comments--show-all {
+  color: #8e8e8e;
+  cursor: pointer;
+}
+
+.post__publishing-date {
+  font-size: 10px;
+  color: #8e8e8e;
+  margin: 8px;
+}
+
+.post__add-comment {
+  border-top: 1px solid #dbdbdb;
+}
+
+.post__add-comment form {
+  margin: 16px 8px;
+  font-size: 14px;
+  display: flex;
+}
+
+.post__add-comment form input {
+  font-size: 14px;
+  border: none;
+  outline: none;
+  background-color: transparent;
+}
+
+.post__add-comment form input[type=text] {
+  flex-grow: 1;
+}
+
+.post__add-comment form input[type=submit] {
+  font-weight: bolder;
+  color: #0095f6;
+  cursor: pointer;
 }
 
 .stories {
