--- a/resources/sass/home.scss
+++ b/resources/sass/home.scss
@@ -6,6 +6,8 @@
 // Components
 @import 'components/roundImg';
 @import 'components/arrowBtn';
+@import 'components/modal';
+@import 'components/addMultiImages';
 
 
 a{
