--- a/resources/sass/layout/home/_header.scss
+++ b/resources/sass/layout/home/_header.scss
@@ -33,12 +33,13 @@ header{
                 object-fit:cover;
                 border-radius:50%;
             }
-            .fa-bell{
+            .fa-bell, .fa-plus-square{
                 width:22px;
                 height:22px;
                 font-size:24px;
                 color:black;
             }
+
         }
     }
     width:100%;
