--- a/resources/sass/layout/home/_post.scss
+++ b/resources/sass/layout/home/_post.scss
@@ -106,6 +106,10 @@
     &__comments{
         margin: 8px;
         font-size:14px;
+        &--username{
+            font-weight:bolder;
+            font-size:14px;
+        }
         &--show-all{
             color:#8e8e8e;
             cursor:pointer;
