--- a/resources/sass/home.scss
+++ b/resources/sass/home.scss
@@ -8,6 +8,7 @@
 @import 'components/arrowBtn';
 @import 'components/modal';
 @import 'components/addMultiImages';
+@import 'components/postOptionsModal';
 
 
 a{
