--- a/resources/sass/login.scss
+++ b/resources/sass/login.scss
@@ -1,6 +1,8 @@
 @import 'base/global';
+@import 'layout/home/footer';
 
 body {
+    height:100%;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -198,37 +200,7 @@ body {
     }
 }
 
-footer{
-    color:#8e8e8e;
-    font-size:12px;
-    ul{
-        display:flex;
-        justify-content:center;
-        flex-wrap:wrap;
-        margin-bottom:12px;
-        li{
-            margin:0 8px;
-        }
-    }
-    .lang-copyright{
-        padding-top:12px;
-        .select-lang-container{
-            position:relative;
-        }
-        .select-lang{
-            background-color:$primary-bg-color;
-            border:none;
-            opacity:0;
-            position:absolute;
-            left:0;
-            top:0;
-            &__arrow{
-                margin-left: 6px;
-            }
-        }
 
-    }
-}
 
 @media screen and (max-width: 875px ){
     .slider-container{
