--- a/public/css/login.css
+++ b/public/css/login.css
@@ -28,7 +28,45 @@ ul {
   display: none;
 }
 
+footer {
+  color: #8e8e8e;
+  font-size: 12px;
+}
+
+footer ul {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  margin-bottom: 12px;
+}
+
+footer ul li {
+  margin: 0 8px;
+}
+
+footer .lang-copyright {
+  padding-top: 12px;
+}
+
+footer .lang-copyright .select-lang-container {
+  position: relative;
+}
+
+footer .lang-copyright .select-lang {
+  background-color: #fafafa;
+  border: none;
+  opacity: 0;
+  position: absolute;
+  left: 0;
+  top: 0;
+}
+
+footer .lang-copyright .select-lang__arrow {
+  margin-left: 6px;
+}
+
 body {
+  height: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -211,43 +249,6 @@ body {
   text-decoration: none;
   font-weight: bolder;
   color: #0095f6;
-}
-
-footer {
-  color: #8e8e8e;
-  font-size: 12px;
-}
-
-footer ul {
-  display: flex;
-  justify-content: center;
-  flex-wrap: wrap;
-  margin-bottom: 12px;
-}
-
-footer ul li {
-  margin: 0 8px;
-}
-
-footer .lang-copyright {
-  padding-top: 12px;
-}
-
-footer .lang-copyright .select-lang-container {
-  position: relative;
-}
-
-footer .lang-copyright .select-lang {
-  background-color: #fafafa;
-  border: none;
-  opacity: 0;
-  position: absolute;
-  left: 0;
-  top: 0;
-}
-
-footer .lang-copyright .select-lang__arrow {
-  margin-left: 6px;
 }
 
 @media screen and (max-width: 875px) {
