--- a/resources/sass/profileHome.scss
+++ b/resources/sass/profileHome.scss
@@ -1,102 +1,259 @@
 @import 'base/global';
-.profile-info{
-    padding-top:30px;
-    display:flex;
-    justify-content:space-between;
-    flex-wrap:wrap;
-    &__image{
+
+$m-width: 735px;
+$s-width: 350px;
+body main{
+    max-width:935px;
+}
+.profile-info {
+    margin-left:100px;
+    padding-top: 30px;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    @media screen and( max-width:$m-width){
+        margin-left:10px;
+    }
+
+    &__image {
         border: $soft-border;
 
-        border-radius:50%;
-        height:150px;
-        width:150px;
+        border-radius: 50%;
+        height: 150px;
+        width: 150px;
         object-fit: cover;
+        @media screen and( max-width:$m-width){
+            height:77px;
+            width:77px;
+        }
     }
-    &__right-up{
+
+    &__right-up {
         flex-shrink: 0;
-        flex-grow:1;
-        margin-left:90px;
-        .user-options{
+        flex-grow: 1;
+        margin-left: 90px;
+        @media screen and( max-width:$m-width){
+            width:100px;
+            margin-left:20px;
+        }
+        .user-options {
             display: flex;
-            align-items:center;
-            >*{
-                margin-right:15px;
+            align-items: center;
+            flex-wrap:wrap;
+
+            >* {
+                margin-right: 15px;
             }
-            .username{
-                font-weight:lighter;
-                font-size:28px;
+
+            .username {
+                font-weight: lighter;
+                font-size: 28px;
             }
-            .edit-btn{
-                font-weight:bolder;
-                font-size:14px;
+
+            .edit-btn {
+                font-weight: bolder;
+                font-size: 14px;
                 border: $soft-border;
-                border-radius:4px;
+                border-radius: 4px;
                 padding: 5px 9px;
-
-
+                @media screen and( max-width:$m-width){
+                    display:none;
+                }
             }
-            //margin-right:15px;
+            .edit-btn.m-width{
+                width:100%;
+                margin-top:20px;
+                display:none;
+                @media screen and( max-width:$m-width){
+                    display:block;
+                }
+            }
+
         }
-        >div{
-            margin-bottom:20px;
+
+        >div {
+            margin-bottom: 20px;
         }
-        .info span{
-            margin-right:20px;
+
+        .info{
+            @media screen and( max-width:$m-width){
+                display:none;
+            }
+            span {
+                margin-right: 20px;
+            }
+        }
+       
+    }
+    &__edit-m{
+        display:none;
+        font-weight: bolder;
+        font-size: 14px;
+        border: $soft-border;
+        border-radius: 4px;
+        padding: 5px 9px;
+        @media screen and( max-width:$m-width){
+            display:block;
         }
     }
-    &__right-bottom{
+
+    &__right-bottom {
         position: relative;
-        bottom:60px;
-        width:100%;
+        bottom: 60px;
+        width: 100%;
         padding-left: 150px +90px;
-        .name{
-            font-size:16px;
+        @media screen and( max-width:$m-width){
+            margin-top:20px;
+            bottom:0;
+            padding-left:0;
         }
-        .description{
-            font-size:14px;
+
+        .name {
+            font-size: 16px;
+            @media screen and( max-width:$m-width){
+                font-size:14px;
+        }
+    }
+
+        .description {
+            font-size: 14px;
+        }
+    }
+
+}
+
+
+.profile-navigation {
+    margin: 0 10px;
+    position: relative;
+
+    .top-line {
+        position: absolute;
+        left: 0;
+        top: 0;
+        height: 1px;
+        width: 100%;
+        content: '';
+        background-color: #dbdbdb;
+        display: block;
+    }
+
+    ul {
+        margin-top: 20px;
+        display: flex;
+        justify-content: center;
+
+        >li:not(:last-child) {
+            margin-right: 60px;
+        }
+
+        >li {
+            padding: 20px 0;
+            z-index: 10;
+
+            a {
+                font-size: 12px;
+                font-weight: bolder;
+                color: #8e8e8e;
+  
+                .category{
+                    text-transform: uppercase;
+                    @media screen and( max-width:$s-width){
+                        display:none;
+                    }
+                }
+                .archive-icon {
+                    margin-right: 5px;
+                    font-size: 15px;
+                }
+                
+            }
+
+        }
+
+        >li.active {
+            border-top: 1px solid black;
+
+            a {
+                color: black;
+            }
         }
     }
 }
-.profile-navigation{
-    position:relative;
-    .top-line{
-        position:absolute;
-        left:0;
-        top:0;
-        height:1px;
-        width:100%;
-        content: '';
-        background-color:#dbdbdb;
-        display:block;
-    }
-    ul{
-        margin-top:20px;
-        display: flex;
+
+.posts-container {
+    .posts{
+        display:flex;
+        flex-wrap:wrap;
         justify-content: center;
-        >li:not(:last-child){
-            margin-right:60px;
-        }
-        >li{
-            padding: 20px 0;
-            z-index:10;
-            a{
-                font-size:12px;
-                font-weight:bolder;
+        li{
+            margin:10px;
+            position:relative;
+            img{
+                display:block;
+                width:25vw;
+                max-width:290px;
+                height:25vw;
+                max-height:290px;
+                min-height:80px;
+                min-width:80px;
+                object-fit: cover;
             }
-            a{
-                color:#8e8e8e;
-                .archive-icon{
-                    margin-right:5px;
-                    font-size:15px;
+            .multi-images-icon {
+                position:absolute;
+                top:6px;
+                right:6px;
+                color:white;
+                transform-style: preserve-3d;
+                .fa-clone{
+                    transform:rotateY(180deg);
                 }
             }
-        }
-        >li.active{
-            border-top:1px solid black;
-            a{
-                color:black;
+            &:hover .hover-info{
+                display:flex;
+
+            }
+            .hover-info{
+                display:none;
+                position:absolute;
+                top:0;
+                left:0;
+                width:100%;
+                height:100%;
+ 
+                justify-content: center;
+                align-items:center;
+                flex-wrap:wrap;
+                cursor:pointer;
+                &__bg{
+                    position:absolute;
+                    top:0;
+                    left:0;
+                    height:100%;
+                    width:100%;
+                    background-color: rgba(0,0,0,0.35);
+                }
+                &__content{
+                    color:white;
+                    z-index:10;
+                    display:flex;
+                    align-items:center;
+                    >*{
+                        margin-right:5px;
+                    }
+                }
+                &__content.likes{
+                    margin-right:20px;
+                    @media screen and (max-width:550px){
+                        margin-right:0px;
+                    }
+                }
+               span{
+                   flex-shrink: 0;
+               }
+
             }
         }
-
     }
+
 }
