--- a/resources/sass/profileHome.scss
+++ b/resources/sass/profileHome.scss
@@ -177,6 +177,9 @@ body main{
 
             a {
                 color: black;
+                span{
+                    color:black;
+                }
             }
         }
     }
