--- a/resources/sass/profileHome.scss
+++ b/resources/sass/profileHome.scss
@@ -260,6 +260,12 @@ body main {
                     height: 100%;
                     width: 100%;
                     background-color: rgba(0, 0, 0, 0.35);
+                    .post-link{
+                        display:block;
+                        width:100%;
+                        height:100%;
+                        z-index:1000;
+                    }
                 }
 
                 &__content {
