--- a/public/css/home.css
+++ b/public/css/home.css
@@ -93,6 +93,7 @@ header {
 .header-content .search {
   display: flex;
   justify-content: center;
+  position: relative;
 }
 
 .header-content .search input {
@@ -102,6 +103,70 @@ header {
   border: 1px solid #dbdbdb;
   font-size: 14px;
   padding: 3px 10px 3px 26px;
+}
+
+.header-content .search .up-arrow {
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  transform: translate(-50%, 0);
+  height: 20px;
+  width: 20px;
+  z-index: 100;
+  border: 10px solid transparent;
+  border-bottom-color: white;
+}
+
+.header-content .search .search-results {
+  max-height: 360px;
+  width: 110%;
+  position: absolute;
+  bottom: 0;
+  transform: translateY(100%);
+  display: flex;
+  flex-direction: column;
+  overflow: auto;
+}
+
+.header-content .search .search-results > a {
+  padding: 10px;
+  display: flex;
+  align-items: center;
+}
+
+.header-content .search .search-results > a:hover {
+  background-color: #fafafa;
+  width: 100%;
+}
+
+.header-content .search .search-results__user-info {
+  display: flex;
+  flex-direction: column;
+}
+
+.header-content .search .search-results__user-info .search-username {
+  font-weight: bolder;
+  font-size: 14px;
+}
+
+.header-content .search .search-results__user-info .search-name {
+  color: #8e8e8e;
+  font-size: 14px;
+}
+
+.header-content .search .search-results .profile-info {
+  margin: 0;
+  padding: 0;
+}
+
+.header-content .search .search-results .profile-info .profile-image-container {
+  height: 38px;
+  width: 38px;
+}
+
+.header-content .search .search-results .profile-info .profile-image-container img {
+  width: 34px;
+  height: 34px;
 }
 
 .header-content .user-actions a {
