--- a/public/css/home.css
+++ b/public/css/home.css
@@ -96,13 +96,24 @@ header {
   position: relative;
 }
 
+.header-content .search__input-container .small-search-icon {
+  font-size: 9px;
+  position: absolute;
+  left: 10px;
+  top: 50%;
+  transform: translate(0, -50%);
+  color: #8e8e8e;
+}
+
 .header-content .search input {
   outline: none;
   background-color: #fafafa;
   max-width: 215px;
   border: 1px solid #dbdbdb;
   font-size: 14px;
-  padding: 3px 10px 3px 26px;
+  padding: 7px;
+  padding-left: 25px;
+  width: 215px;
 }
 
 .header-content .search .up-arrow {
