--- a/resources/sass/layout/home/_header.scss
+++ b/resources/sass/layout/home/_header.scss
@@ -91,6 +91,9 @@ header{
                 }
             }
         }
+        .search-results.hide{
+            display: none;
+        }
     }
     .user-actions{
         a{
