Notifications for user actions

--- a/public/css/friends.css
+++ b/public/css/friends.css
@@ -32,9 +32,14 @@ li {
   display: none;
 }
 
+.clickable {
+  cursor: pointer;
+}
+
 body .friends-modal > li {
   justify-content: space-between;
   padding: 5px;
+  padding-right: 10px;
   cursor: default;
 }
 
