--- a/resources/sass/friends.scss
+++ b/resources/sass/friends.scss
@@ -3,6 +3,7 @@ body .friends-modal{
     >li{
         justify-content: space-between;
         padding:5px;
+        padding-right:10px;
         cursor:default;
     }
     >li >a{
