--- a/public/css/home.css
+++ b/public/css/home.css
@@ -32,6 +32,10 @@ li {
   display: none;
 }
 
+.clickable {
+  cursor: pointer;
+}
+
 footer {
   color: #8e8e8e;
   font-size: 12px;
@@ -277,7 +281,7 @@ header {
       scroll-snap-type: x mandatory;
   touch-action: auto;
   display: flex;
-  overflow: auto;
+  overflow: hidden;
 }
 
 .post__slider--images::-webkit-scrollbar {
