Search users hide/show on focus/blur

--- a/resources/sass/profileHome.scss
+++ b/resources/sass/profileHome.scss
@@ -66,6 +66,10 @@ body main {
                     display: none;
                 }
             }
+            .add-friend-btn{
+                color:white;
+                background-color:rgb(0, 149, 246);
+            }
 
             .edit-btn.m-width {
                 width: 100%;
