--- a/public/css/home.css
+++ b/public/css/home.css
@@ -231,6 +231,10 @@ header {
   margin-bottom: 24px;
 }
 
+.post {
+  margin-bottom: 60px;
+}
+
 .post__username {
   font-weight: bolder;
   font-size: 14px;
