--- a/public/css/profileHome.css
+++ b/public/css/profileHome.css
@@ -177,6 +177,11 @@ body main {
   }
 }
 
+.profile-info__right-up .user-options .add-friend-btn {
+  color: white;
+  background-color: #0095f6;
+}
+
 .profile-info__right-up .user-options .edit-btn.m-width {
   width: 100%;
   margin-top: 20px;
